# cagentoniotcore

./: README.md
WISEAgent/: Makefile.am  WISEAgent.sln  WISEAgent.v14iot.sln  common_config.mk  configure.ac
WISEAgent/Include/: susiaccess_def.h  susiaccess_handler_api.h  susiaccess_handler_ex_api.h  susiaccess_handler_mgmt.h  svnversion.h
WISEAgent/Library3rdParty/log4z-3.2.0/: README.md  log4z.cpp
WISEAgent/Library3rdParty/openssl-1.0.1h/: INSTALL.WIOTCORE
WISEAgent/Library3rdParty/openssl-1.0.1h.win32/: IoT-Vars.cmd
WISEAgent/Modules/NetMonitorHandler/: NetMonitorHandler.c  NetMonitorHandler.h  NetMonitorHandler.vcproj  NetMonitorHandler.vcxproj  NetMonitorHandler.vcxproj.filters  Parser.c  Parser.h
WISEAgent/Modules/ProcessMonitorHandler/: Makefile  Makefile.am  Parser.c  ProcessMonitorHandler.c  ProcessMonitorHandler.h  ProcessMonitorHandler.vcxproj  ProcessMonitorHandler.vcxproj.filters  process_threshold.c  process_threshold.h
WISEAgent/Platform/Linux/: NamedPipeClient.c  NamedPipeServer.c  NamedPipeServer.h  common.c  common.h  network.c  network.h  service.c  service.h
WISEAgent/Platform/Windows/: NamedPipeClient.c  NamedPipeClient.h  NamedPipeServer.c  NamedPipeServer.h  common.c  common.h  network.c  network.h  platform.h  service.h
WISEAgent/Sample/HandlerSample/: Makefile  Makefile.am  handler_api.c
WISEAgent/Sample/SampleAgent/: Makefile  sampleagent.c
WISEAgent/Sample/SampleClient/: SampleClient.cpp  SampleClient.vcproj  SampleClient.vcxproj  SampleClient.vcxproj.filters  agent_config.xml
(+58 files in other folders)
